--- a/style2.css
+++ b/style2.css
@@ -3,7 +3,7 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    background-image: url('kapibara.jpg'); /* 背景画像 */
+    background-image: url('カピバラ.jpg'); /* 背景画像 */
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
